remove overflow to body from reset make topbar fixed to the body container so only the content scrolls up/down added infinite scroll to non featured videos clean gallery service & controller prevent from visual issues on video-card

--- a/components/topbar/topbar.scss
+++ b/components/topbar/topbar.scss
@@ -1,5 +1,7 @@
 .topbar {
 	height: $topbarHeight;
+	position: fixed;
+	width: 100%;
 	@extend %display-flex;
 	@extend %justify-content-space-between;
 	@extend %align-items-center;
